[tool.poetry]
name = "jarvis-tool"
version = "0.1.0"
description = ""
authors = ["IANTHEREAL <argregoryian@gmail.com>"]
readme = "README.md"
packages = [{include = "jarvis_tool"}]

[tool.poetry.dependencies]
python = "^3.10"
sekiro = "^0.1"
openai = "^0.27.8"
tiktoken = "^0.4.0"
selenium = "^4.10.0"
webdriver-manager = "^4.0.0"
pydantic = "1.10.8"
ruamel-yaml = "^0.17.32"
ruamel-yaml-clib = "^0.2.7"
pyyaml = "6.0.0"
bs4 = "^0.0.1"
superagi-tools = "^1.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
